@@ -1,5 +1,6 @@
 *2.2*
-* Added the ability to set a timout for network requests.  The timeout is given when a client is created by passing the :timeout hash parameter when creating a client. The value of the parameter is an integer number of seconds.
+* Added the ability to set a timout for network requests. The timeout is given when a client is created by passing the :timeout hash parameter when creating a client. The value of the parameter is an integer number of seconds.
+* Fixed a bug in VirtualServer#capture_image
 
 *2.1.1*
 * Virtual server upgrades no longer raise exceptions
